--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@
     padding: 0;
     }
     .principal {
-    background-image: url("img/sementes-de-soja-em-sacos-de-piso-de-madeira-e-canhamo-conceito-de-nutricao-alimentar_1150-26328.avif");
+    background-image: url("img/soja-1479485951.jpg");
     background-repeat: no-repeat;
     background-size: contain;
     align-items: center;
