--- a/style.css
+++ b/style.css
@@ -17,7 +17,14 @@
     margin: 0;
     padding: 0;
     }
-  
+    .principal {
+        background-image: url("img/soja-1479485951.jpg");
+        background-repeat: no-repeat;
+        background-size: contain;
+        align-items: center;
+        text-align: center;
+        }
+        
     .container {
     height: 100vh;
     display: grid;
