--- a/style.css
+++ b/style.css
@@ -20,8 +20,18 @@
  }
 
  /*CORPO DA PAGINA*/
- body 
+      body {
        background-color: var(--background-color);
        color:var(--text-color);
        line-height: 1.6;
+      }
+     h3{
+         margin-top: 25px;
+     }
 
+     p{
+      margin-top:  20pc;
+     }
+     img
+         max-width: 90%;
+         
