--- a/style.css
+++ b/style.css
@@ -1,378 +1,179 @@
-@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100;200&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
 
-* {
+*{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Outfit', sans-serif;
-}
-
-body {
-    background-color: rgb(80, 162, 255);
-    overflow-x: hidden;
-}
-
-.header, .footer {
-    position: fixed;
-    width: 100%;
-    background-color: rgb(80, 162, 255);
-    padding: 1px 0;
-    z-index: 1000;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-}
-
-.header nav ul {
-    list-style-type: none;
-    display: flex;
-    justify-content: center;
-    gap: 20px;
-}
-
-.header nav ul li a {
-    color: #ffffff;
+    font-family: 'Poppins', sans-serif;
+    list-style: none;
     text-decoration: none;
-    font-size: 18px;
-    transition: color 0.3s ease-in-out, font-size 0.3s ease-in-out;
 }
-
-.header nav ul li a:hover {
-    color: #000000;
-    font-size: 19px;
-    font-weight: bold;
+:root{
+    --red:#2aa31f;
+    --white:#fff;
+    --dark:#07350a;
 }
-
-.titulo {
-    width: 100%;
-    height: 100%;
+body{
+    color: var(--dark);
+    background: var(--white);
+}
+.navigation{
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
+    padding: 18px 40px;
+    box-shadow: 0 0.1rem 0.5rem #ccc;
+    width: 100%;
+    background: var(--white);
+    transition: all 0.5s;
     position: fixed;
-    z-index: -1;
-    font-size: 40px;
-    color: #fff;
 }
-
-.logo img {
-    width: 200px;
+.navigation .logo{
+    color: var(--red);
+    font-size: 1.7rem;
+    font-weight: 600;
 }
-
-.drone-image {
-    width: 300px;
-    height: auto;
-    float: left;
-    margin-right: 20px;
-    margin-bottom: 20px;
+.logo span{
+    color: var(--dark);
 }
-
-.conteudo {
-    padding: 150px 100px;
-    background-color: #fff;
+.navigation ul{
+    display: flex;
+    align-items: center;
+    gap: 5rem;
 }
-
-.conteudo h1 {
-    font-size: 3em;
-    margin-bottom: 20px;
+.navigation ul li a{
+    color: var(--dark);
+    font-size: 17px;
+    font-weight: 500;
+    transition: all 0.5s;
 }
-
-.conteudo p {
-    font-size: 1.5em;
+.navigation ul li a:hover{
+    color: var(--red);
 }
-
-.conteudo h2 {
-    font-size: 1.5em;
+.navigation i{
+    cursor: pointer;
+    font-size: 1.5rem;
 }
-
-.conteudo ul li {
-    font-size: 1.5em;
+.menu{
+    cursor: pointer;
+    display: none;
 }
-
-section.ondas-box {
-    position: relative;
+.menu .bar{
+    display: block;
+    width: 28px;
+    height: 3px;
+    border-radius: 3px;
+    background: var(--dark);
+    margin: 5px auto;
+    transition: all 0.3s;
+}
+.menu .bar:nth-child(1),
+.menu .bar:nth-child(3){
+    background: var(--red);
+}
+.home{
     width: 100%;
     height: 100vh;
-}
-
-.onda {
-    width: 100%;
-    height: 100px;
-    position: absolute;
-    bottom: 0;
-    background-image: url(img/wave.png);
-    background-size: 1000px 100px;
-    animation: ondaAnimada 5s ease-in-out infinite alternate;
-}
-
-@keyframes ondaAnimada {
-    0% {
-        transform: translateY(0px);
-    }
-    100% {
-        transform: translateY(10px);
-    }
-}
-
-#onda1 {
-    z-index: 1000;
-    opacity: 1;
-    background-position-x: 400;
-}
-
-#onda2 {
-    z-index: 999;
-    opacity: 0.5;
-    background-position-x: 300px;
-}
-
-#onda3 {
-    z-index: 998;
-    opacity: 0.2;
-    background-position-x: 200px;
-}
-
-#onda4 {
-    z-index: 997;
-    opacity: 0.8;
-    background-position-x: 100px;
-}
-
-.footer {
-    width: 100%;
-    background-color: rgb(80, 162, 255);
-    padding: 10px 0;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-    text-align: center;
-    color: #ffffff;
-    position: relative;
-    margin-top: 0px;
-}
-
-.img-ft {
-    width: 100px;
-}
-
-.colheitadeira {
-    width: 250px;
-    height: auto;
-    animation: colheitadeiraAnimacao .5s ease-in-out infinite;
-}
-
-.colheitadeira-section {
-    position: relative;
-    top: 385px;
-    left: -35px;
-}
-
-.colheitadeira-image {
-    position: absolute;
-}
-
-@keyframes colheitadeiraAnimacao {
-    0% {
-        transform: translateY(0);
-    }
-    50% {
-        transform: translateY(-5px);
-    }
-    100% {
-        transform: translateY(0);
-    }
-}
-
-.header {
     display: flex;
+    align-items: center;
     justify-content: space-between;
-    align-items: center;
-    padding: 10px 20px;
-    background-color: rgb(80, 162, 255);
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-    position: fixed;
+    padding: 0px 10%;
+}
+.home-text{
+    max-width: 37rem;
+}
+.home-text .text-h4{
+    font-size: 1.5rem;
+    color: var(--red);
+    margin-bottom: 1rem;
+}
+.home-text .text-h1{
+    font-size: 4rem;
+    margin-bottom: 1rem;
+    line-height: 4rem;
+}
+.home-text p{
+    margin-bottom: 4rem;
+}
+
+
+.button{
+    padding: 25px 65px;
+    background: var(--red);
+    color: var(--white);
+    border-radius: 13px;
+    font-weight: 700;
+    transition: all 0.5s;
+    font-size: 25px;
+}
+.button:hover{
+    background: #fc4c35;
+}
+
+
+.home-img img{
     width: 100%;
-    z-index: 1000;
+    height: cover;
+    border-radius: 10px;
+    transition: 0.6s ease;
 }
 
-.header .logo {
-    display: flex;
-    align-items: center;
+.home-img:hover img {
+    transform: scale(1.05);
 }
 
-.header .logo .logo-img {
-    width: 80px;
-    height: auto;
-}
-
-.header nav {
-    flex-grow: 1;
-    text-align: center;
-}
-
-.header nav ul {
-    list-style-type: none;
-    display: flex;
-    justify-content: center;
-    gap: 20px;
-}
-
-.header nav ul li {
-    margin: 0 10px;
-}
-
-.header nav ul li a {
-    color: #ffffff;
-    text-decoration: none;
-    font-size: 18px;
-    transition: color 0.3s;
-}
-
-.header nav ul li a:hover {
-    color: #000000;
-    font-weight: bold;
-}
-
-#audio-player {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-}
-
-#audio-player p {
-    margin: 0 10px;
-}
-
-@media screen and (max-width: 1024px) {
-    .header {
-        padding: 10px 10px;
+@media (max-width:785px) {
+    .navigation{
+        padding: 18px 20px;
     }
-
-    .conteudo {
-        padding: 100px 10px;
-    }
-
-    .conteudo h1 {
-        font-size: 2em;
-    }
-
-    .conteudo p, .conteudo h2, .conteudo ul li {
-        font-size: 1em;
-    }
-}
-
-@media screen and (max-width: 768px) {
-    .conteudo {
-        padding: 80px 10px;
-    }
-
-    .conteudo h1 {
-        font-size: 1.5em;
-    }
-
-    .conteudo p, .conteudo h2, .conteudo ul li {
-        font-size: 0.9em;
-    }
-}
-
-@media screen and (max-width: 1200px) {
-    .header {
-        padding: 10px 10px;
-    }
-
-    .conteudo {
-        padding: 120px 10px;
-    }
-
-    .conteudo h1 {
-        font-size: 2em;
-    }
-
-    .conteudo p, .conteudo h2, .conteudo ul li {
-        font-size: 1em;
-    }
-}
-
-@media screen and (max-width: 992px) {
-    .conteudo {
-        padding: 100px 10px;
-    }
-
-    .conteudo h1 {
-        font-size: 1.8em;
-    }
-
-    .conteudo p, .conteudo h2, .conteudo ul li {
-        font-size: 0.9em;
-    }
-
-    .colheitadeira {
-        width: 180px;
-    }
-}
-
-.menu-toggle {
-    display: none;
-    flex-direction: column;
-    cursor: pointer;
-    position: absolute;
-    right: 20px;
-    top: 50%;
-    transform: translateY(-50%);
-}
-
-.menu-toggle .bar {
-    width: 25px;
-    height: 3px;
-    background-color: white;
-    margin: 3px 0;
-    transition: 0.3s;
-}
-
-.overlay {
-    display: none;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(80, 162, 255);
-    z-index: 999;
-}
-
-@media screen and (max-width: 768px) {
-    .header nav ul {
-        display: none;
-        flex-direction: column;
-        position: absolute;
-        top: 60px;
-        right: 0;
-        background-color: rgb(80, 162, 255);
-        width: 100%;
-    }
-
-    .header nav ul.active {
-        display: flex;
-    }
-
-    .menu-toggle {
-        display: flex;
-    }
-
-    .overlay.active {
+    .menu{
         display: block;
     }
-
-    @media screen and (max-width: 768px) {
-        .onda {
-            background-size: 1500px 300px;
-        }
-        h1 {
-            font-size: 2em;
-            margin-bottom: 20px;
-        }
+    .menu.ativo .bar:nth-child(1){
+        transform:  translateY(8px) rotate(45deg);
     }
-
-    @media screen and (max-width: 768px) {
-        .conteudo p {
-            font-size: 1.1em;
-        }
+    .menu.ativo .bar:nth-child(2) {
+        opacity: 0;
+    }
+    .menu.ativo .bar:nth-child(3){
+        transform: translateY(-8px) rotate(-45deg);
+    }
+    .nav-menu{
+        position: fixed;
+        right: -100%;
+        top: 70px;
+        width: 100%;
+        height: 100%;
+        flex-direction: column;
+        background: var(--white);
+        gap: -10px;
+        transition: 0.3s;
+    }
+    .nav-menu.ativo{
+        right: 0;
+    }
+    .nav-item{
+        margin: 16px 0;
+    }
+    /*main*/
+    .home{
+        padding: 100px 2%;
+        flex-direction: column;
+        text-align: center;
+        overflow: hidden;
+        gap: 5rem;
+    }
+    .home .text-h4{
+        font-size: 15px;
+    }
+    .home .text-h1{
+        font-size: 2.5rem;
+        line-height: 3rem;
+    }
+    .home p{
+        font-size: 15px;
+    }
+    .home-img{
+        width: 125%;
     }
 }
