--- a/style.css
+++ b/style.css
@@ -104,7 +104,7 @@ footer {
   text-align: center;
   padding: 20px;
   background-color: #d1bebe;
-  color: #aaa;
+  color: #d30c0c;
   font-size: 16px;
 }
 
@@ -122,7 +122,7 @@ footer {
   color: #4CAF50; /* Um verde vibrante para destaque */
   font-weight: bold; /* Deixa o texto em negrito */
   margin-bottom: 1.5rem; /* Aumenta o espaçamento abaixo do título */
-  text-shadow: 1px 1px 2px rgba(0,0,0,0.2); /* Adiciona uma leve sombra para mais destaque */
+  text-shadow: 1px 1px 2px rgba(201, 21, 21, 0.2); /* Adiciona uma leve sombra para mais destaque */
 }
 
 .celebracao p {
@@ -141,7 +141,7 @@ footer {
   background-color: #fff;
   padding: 1.5rem; /* Aumentado o padding para melhor visual */
   border-radius: 12px;
-  box-shadow: 0 2px 6px rgba(250, 28, 28, 0.1);
+  box-shadow: 0 2px 6px rgba(153, 26, 26, 0.1);
 }
 
 .motivo h3 {
